--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/A_letter_tech_logo-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TO-DO-LIST</title>
+    <title>TASK FLOW</title>
   </head>
   <body>
     <div id="root"></div>
